--- a/components/plasmic/amap_website/PlasmicContact.module.css
+++ b/components/plasmic/amap_website/PlasmicContact.module.css
@@ -22,24 +22,120 @@
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  height: 100%;
-  max-width: 100%;
+  height: auto;
+  max-width: 80%;
   min-width: 0;
-  min-height: 0;
   padding: 0px;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__grGkp {
+    max-width: none;
+    padding-right: var(--token-eReirMpIv);
+    padding-left: var(--token-eReirMpIv);
+  }
+}
+.freeBox__jImQ {
+  flex-direction: row;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  margin-top: var(--token-63kTP6Ueu);
+  margin-bottom: var(--token-2zjFq4DPV);
+  min-width: 0;
+  padding: 0px;
+}
+.freeBox__jImQ > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  min-width: 0;
+  margin-left: calc(0px - var(--token-2zjFq4DPV));
+  width: calc(100% + var(--token-2zjFq4DPV));
+}
+.freeBox__jImQ > :global(.__wab_flex-container) > *,
+.freeBox__jImQ > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__jImQ > :global(.__wab_flex-container) > picture > img,
+.freeBox__jImQ
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: var(--token-2zjFq4DPV);
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__jImQ {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__jImQ > :global(.__wab_flex-container) {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: calc(0px - 0px);
+    width: calc(100% + 0px);
+    margin-top: calc(0px - var(--token-L5ZvEOVLJ));
+    height: calc(100% + var(--token-L5ZvEOVLJ));
+  }
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__jImQ > :global(.__wab_flex-container) > *,
+  .freeBox__jImQ > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+  .freeBox__jImQ > :global(.__wab_flex-container) > picture > img,
+  .freeBox__jImQ
+    > :global(.__wab_flex-container)
+    > :global(.__wab_slot)
+    > picture
+    > img {
+    margin-left: 0px;
+    margin-top: var(--token-L5ZvEOVLJ);
+  }
 }
 .h1 {
   color: var(--token-pf4RLfMl0);
   font-family: var(--token-ongjxvNd3);
   font-weight: 500;
   font-size: 48px;
-  text-align: center;
-  margin-top: var(--token-63kTP6Ueu);
-  margin-bottom: var(--token-7R6fY6Np7);
+  text-align: left;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: auto;
+  height: auto;
+  letter-spacing: normal;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .h1 {
+    max-width: 100%;
+    margin-top: calc(0px + var(--token-L5ZvEOVLJ)) !important;
+  }
+}
+.img {
+  position: relative;
+  object-fit: contain;
+  width: auto;
+  height: 50px;
+}
+.img > picture > img {
+  object-fit: contain;
+}
+.img > .__wab_img-spacer > img {
+  object-fit: contain;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .img {
+    height: 100px;
+    flex-shrink: 0;
+  }
+}
+.text__yQPy6 {
+  position: relative;
   width: 100%;
   height: auto;
-  max-width: 800px;
-  letter-spacing: normal;
+  font-family: var(--token-5iF75TGQk);
+  margin-bottom: var(--token-2zjFq4DPV);
   min-width: 0;
 }
 .columns {
@@ -49,7 +145,6 @@
   width: 100%;
   height: auto;
   flex-shrink: 1;
-  max-width: 80%;
   min-width: 0;
   padding: 0px;
 }
@@ -83,8 +178,6 @@
     height: auto;
     flex-direction: row;
     max-width: 100%;
-    padding-right: var(--token-eReirMpIv);
-    padding-left: var(--token-eReirMpIv);
     min-width: 0;
   }
 }
@@ -171,6 +264,7 @@
 @media (min-width: 0px) and (max-width: 768px) {
   .text__jpPn8 {
     width: auto;
+    text-align: center;
   }
 }
 .contactInfos {
@@ -269,6 +363,9 @@
 @media (min-width: 0px) and (max-width: 768px) {
   .freeBox__tQ04 {
     display: flex;
+    align-self: auto;
+    align-items: center;
+    justify-content: center;
   }
 }
 .text__t975S {
@@ -301,6 +398,7 @@
 @media (min-width: 0px) and (max-width: 768px) {
   .text__ulc9U {
     width: auto;
+    text-align: center;
   }
 }
 .addressInfos {
@@ -408,15 +506,4 @@
 .slotTargetCity {
   font-family: var(--token-5iF75TGQk);
   font-size: 20px;
-}
-.img {
-  position: relative;
-  object-fit: cover;
-  max-width: 90%;
-}
-.img > picture > img {
-  object-fit: cover;
-}
-.img > .__wab_img-spacer > img {
-  object-fit: cover;
 }
