--- a/components/plasmic/amap_website/PlasmicContracts.module.css
+++ b/components/plasmic/amap_website/PlasmicContracts.module.css
@@ -7,6 +7,7 @@
   overflow-x: hidden;
   justify-content: flex-start;
   align-items: center;
+  background: var(--token-p784AvFnn);
   min-width: 0;
   min-height: 0;
 }
@@ -158,7 +159,7 @@
 .freeBox__frs9T {
   display: grid;
   position: relative;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   width: 100%;
   height: 100%;
   max-width: 100%;
