feat(contracts): added id and date field to contracts

--- a/components/plasmic/amap_website/PlasmicContractCard.module.css
+++ b/components/plasmic/amap_website/PlasmicContractCard.module.css
@@ -10,7 +10,7 @@
   position: relative;
   border-radius: 4px;
   padding: var(--token-eReirMpIv) 0px;
-  border: 1px none #d4cfa0;
+  border: 1px solid #d4cfa0;
 }
 .freeBox___9JV3Z {
   flex-direction: column;
