--- a/components/plasmic/amap_website/PlasmicContracts.module.css
+++ b/components/plasmic/amap_website/PlasmicContracts.module.css
@@ -7,7 +7,7 @@
   overflow-x: hidden;
   justify-content: flex-start;
   align-items: center;
-  background: var(--token-p784AvFnn);
+  background: none;
   min-width: 0;
   min-height: 0;
 }
