--- a/components/plasmic/amap_website/PlasmicHeader.module.css
+++ b/components/plasmic/amap_website/PlasmicHeader.module.css
@@ -7,7 +7,7 @@
   height: auto;
   max-width: 100%;
   position: relative;
-  background: #ffffffcc;
+  background: none;
   min-width: 0;
   padding: var(--token-eReirMpIv) var(--token-7R6fY6Np7);
 }
