--- a/components/plasmic/amap_website/PlasmicSiteLogo.module.css
+++ b/components/plasmic/amap_website/PlasmicSiteLogo.module.css
@@ -37,8 +37,8 @@
   height: auto;
   max-width: 800px;
   color: var(--token-WNBJHso-i);
-  font-family: var(--token-5iF75TGQk);
-  font-weight: 700;
+  font-family: "Dosis", sans-serif;
+  font-weight: 800;
   align-self: center;
   font-size: 20px;
 }
