refacto(home): redefined website style

--- a/components/plasmic/amap_website/PlasmicHomepage.module.css
+++ b/components/plasmic/amap_website/PlasmicHomepage.module.css
@@ -50,7 +50,7 @@
   width: 100%;
   height: 100%;
   max-width: 100%;
-  background: url("/plasmic/amap_website/images/homeBg.png") top 50% left 50% / cover repeat;
+  background: url("/plasmic/amap_website/images/homeBg.png") top 50% left 50% / cover no-repeat;
   margin-bottom: 0px;
   min-width: 0;
   padding: 0px;
@@ -86,6 +86,9 @@
   font-weight: 400;
   color: var(--token-B133__sIH);
 }
+.root .scrollDownButton:hover {
+  color: var(--token-WNBJHso-i);
+}
 .svg__ttGn0 {
   position: relative;
   object-fit: cover;
@@ -112,7 +115,7 @@
     padding: var(--token-7R6fY6Np7) var(--token-eReirMpIv);
   }
 }
-.text__z4F0F {
+.h2__z4F0F {
   color: var(--token-WNBJHso-i);
   font-family: var(--token-ongjxvNd3);
   font-weight: 700;
@@ -123,6 +126,7 @@
   width: 100%;
   height: auto;
   max-width: 800px;
+  letter-spacing: normal;
   min-width: 0;
 }
 .freeBox__oPxo6 {
@@ -253,13 +257,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 9999px;
   height: auto;
-  max-width: 100%;
-  background: #ffe7424d;
-  min-width: 0;
+  background: url("/plasmic/amap_website/images/gridBg.svg") top 50% left 50% / 20px auto repeat;
+  box-shadow: inset 0px 10px 30px 0px #00000029;
+  overflow: hidden;
+  border-top-style: dashed;
+  border-right-style: none;
+  border-bottom-style: dashed;
+  border-left-style: none;
+  border-top-width: 5px;
+  border-bottom-width: 5px;
+  border-color: var(--token-5wRFei0Vr);
 }
-.text__bAjAh {
+.h2__bAjAh {
   color: var(--token-WNBJHso-i);
   font-family: var(--token-ongjxvNd3);
   font-weight: 700;
@@ -270,17 +281,205 @@
   width: 100%;
   height: auto;
   max-width: 800px;
+  letter-spacing: normal;
   min-width: 0;
 }
 .freeBox__m5KB9 {
   display: flex;
   position: relative;
-  flex-direction: row;
-  align-items: stretch;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
   height: auto;
   max-width: 100%;
+  min-width: 0;
+}
+.freeBox__wso7 {
+  flex-direction: column;
+  display: flex;
+  position: relative;
+  height: auto;
+  max-width: 100%;
+  width: 500px;
+  padding: 0px var(--token-eReirMpIv);
+}
+.freeBox__wso7 > :global(.__wab_flex-container) {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin-top: calc(0px - var(--token-xmbQtwPzW));
+  height: calc(100% + var(--token-xmbQtwPzW));
+}
+.freeBox__wso7 > :global(.__wab_flex-container) > *,
+.freeBox__wso7 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__wso7 > :global(.__wab_flex-container) > picture > img,
+.freeBox__wso7
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-top: var(--token-xmbQtwPzW);
+}
+.freeBox__rheQ5 {
+  flex-direction: row;
+  display: flex;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+}
+.freeBox__rheQ5 > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - var(--token-L5ZvEOVLJ));
+  width: calc(100% + var(--token-L5ZvEOVLJ));
+}
+.freeBox__rheQ5 > :global(.__wab_flex-container) > *,
+.freeBox__rheQ5 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__rheQ5 > :global(.__wab_flex-container) > picture > img,
+.freeBox__rheQ5
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: var(--token-L5ZvEOVLJ);
+}
+.text__pzLsd {
+  font-family: var(--token-ongjxvNd3);
+  font-weight: 900;
+  font-size: 60px;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  background: var(--token-Km-I5qLf7);
+  border-radius: 1000px;
+  padding: 0px 30px;
+}
+.text__gPmse {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  font-family: var(--token-ongjxvNd3);
+  min-width: 0;
+}
+.svg__rJutr {
+  position: relative;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100%;
+  height: 100px;
+  min-width: 0;
+  flex-shrink: 0;
+}
+.freeBox__rrAdi {
+  flex-direction: row;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+}
+.freeBox__rrAdi > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - var(--token-L5ZvEOVLJ));
+  width: calc(100% + var(--token-L5ZvEOVLJ));
+}
+.freeBox__rrAdi > :global(.__wab_flex-container) > *,
+.freeBox__rrAdi > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox__rrAdi > :global(.__wab_flex-container) > picture > img,
+.freeBox__rrAdi
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: var(--token-L5ZvEOVLJ);
+}
+.text__yfUPp {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  font-family: var(--token-ongjxvNd3);
+  text-align: right;
+  min-width: 0;
+}
+.text__nXa00 {
+  font-family: var(--token-ongjxvNd3);
+  font-weight: 900;
+  font-size: 60px;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  color: #535353;
+  background: var(--token-8lrXM-NQ6);
+  border-radius: 1000px;
+  padding: 0px 30px;
+}
+.svg__hxxRp {
+  position: relative;
+  object-fit: cover;
+  max-width: 100%;
+  width: 100%;
+  height: 100px;
+  transform: none;
+  min-width: 0;
+  flex-shrink: 0;
+}
+.freeBox___1Iy6R {
+  flex-direction: row;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-width: 0;
+}
+.freeBox___1Iy6R > :global(.__wab_flex-container) {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 0;
+  margin-left: calc(0px - var(--token-L5ZvEOVLJ));
+  width: calc(100% + var(--token-L5ZvEOVLJ));
+}
+.freeBox___1Iy6R > :global(.__wab_flex-container) > *,
+.freeBox___1Iy6R > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
+.freeBox___1Iy6R > :global(.__wab_flex-container) > picture > img,
+.freeBox___1Iy6R
+  > :global(.__wab_flex-container)
+  > :global(.__wab_slot)
+  > picture
+  > img {
+  margin-left: var(--token-L5ZvEOVLJ);
+}
+.text__rdHxr {
+  font-family: var(--token-ongjxvNd3);
+  font-weight: 900;
+  font-size: 60px;
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 800px;
+  background: var(--token-A3eGaVZ4V);
+  border-radius: 1000px;
+  padding: 0px 30px;
+}
+.text___9WRy {
+  position: relative;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  font-family: var(--token-ongjxvNd3);
   min-width: 0;
 }
 .sectionValeurs {
@@ -326,7 +525,7 @@
     padding-left: var(--token-eReirMpIv);
   }
 }
-.h2 {
+.h2__recme {
   color: var(--token-WNBJHso-i);
   font-family: var(--token-ongjxvNd3);
   font-weight: 700;
@@ -337,6 +536,7 @@
   width: 100%;
   height: auto;
   max-width: 800px;
+  letter-spacing: normal;
   min-width: 0;
 }
 .columns {
