--- a/components/plasmic/amap_website/PlasmicFooter.module.css
+++ b/components/plasmic/amap_website/PlasmicFooter.module.css
@@ -6,21 +6,22 @@
   width: 100%;
   height: 100%;
   max-width: 100%;
-  background: url("/plasmic/amap_website/images/footerBg.svg") top 50% left 50% / cover repeat;
+  background: linear-gradient(#ffe74233, #ffe74233),
+    url("/plasmic/amap_website/images/image.png") top 50% left 50% / contain repeat;
   position: relative;
+  border-bottom-style: none;
+  border-bottom-width: 1px;
   min-width: 0;
   min-height: 0;
   padding: 100px 0px 0px;
-}
-@media (min-width: 0px) and (max-width: 768px) {
-  .footer {
-    background: url("/plasmic/amap_website/images/footerBg.svg") top 50% left 50% / cover no-repeat
-      padding-box border-box;
-  }
+  border-top: 5px dashed var(--token-5wRFei0Vr);
 }
 .footerminimal {
   background: none;
   padding-top: 0px;
+  border-right-width: 1px;
+  border-left-width: 1px;
+  border-style: none;
 }
 .columns {
   flex-direction: row;
@@ -191,7 +192,7 @@
   display: flex;
   position: relative;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   width: 100%;
   height: auto;
@@ -210,7 +211,7 @@
   object-fit: cover;
   max-width: 100%;
   height: 120px;
-  width: 70px;
+  width: 80px;
   color: var(--token-WNBJHso-i);
   margin-right: var(--token-L5ZvEOVLJ);
   flex-shrink: 0;
@@ -233,9 +234,9 @@
   height: auto;
   max-width: 800px;
   color: var(--token-WNBJHso-i);
-  font-family: var(--token-5iF75TGQk);
-  font-weight: 700;
-  font-size: 30px;
+  font-family: var(--token-KpVr-3FRg);
+  font-weight: 800;
+  font-size: 40px;
   min-width: 0;
 }
 .text__dDwWv {
@@ -244,8 +245,8 @@
   height: auto;
   max-width: 800px;
   color: var(--token-WNBJHso-i);
-  font-family: var(--token-5iF75TGQk);
-  font-weight: 700;
+  font-family: var(--token-KpVr-3FRg);
+  font-weight: 800;
   font-size: 20px;
   min-width: 0;
 }
@@ -255,8 +256,8 @@
   height: auto;
   max-width: 800px;
   color: var(--token-WNBJHso-i);
-  font-family: var(--token-5iF75TGQk);
-  font-weight: 700;
+  font-family: var(--token-KpVr-3FRg);
+  font-weight: 800;
   font-size: 30px;
   min-width: 0;
 }
@@ -283,10 +284,11 @@
   width: 100%;
   height: auto;
   max-width: 800px;
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   font-weight: 700;
   font-size: 20px;
   margin-bottom: var(--token-xmbQtwPzW);
+  color: var(--token-pf4RLfMl0);
   min-width: 0;
 }
 @media (min-width: 0px) and (max-width: 768px) {
@@ -311,7 +313,7 @@
   }
 }
 .slotTargetSchedule {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .slotTargetSchedule {
@@ -330,7 +332,7 @@
   }
 }
 .slotTargetAddress {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
 }
 .freeBox__lqfLt {
   display: flex;
@@ -351,7 +353,7 @@
   }
 }
 .slotTargetPostCode {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
 }
 .freeBox__cdTq1 {
   position: relative;
@@ -360,7 +362,7 @@
   flex-direction: row;
 }
 .slotTargetCity {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
 }
 .column___4XhX0 {
   display: flex;
@@ -397,9 +399,9 @@
   height: auto;
   max-width: 800px;
   font-weight: 700;
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   font-size: 20px;
-  color: #535353;
+  color: var(--token-pf4RLfMl0);
   margin-right: var(--token-eReirMpIv);
 }
 @media (min-width: 0px) and (max-width: 768px) {
@@ -422,10 +424,10 @@
   }
 }
 .slotTargetPhoneNumber {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   font-size: 20px;
   font-weight: 700;
-  color: #535353;
+  color: var(--token-pf4RLfMl0);
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .slotTargetPhoneNumber {
@@ -446,10 +448,10 @@
   }
 }
 .slotTargetEmail {
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   font-size: 20px;
   font-weight: 700;
-  color: #535353;
+  color: var(--token-pf4RLfMl0);
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .slotTargetEmail {
@@ -490,12 +492,14 @@
   width: 100%;
   height: auto;
   max-width: 100%;
-  background: var(--token-a3sQNIQBO);
+  background: var(--token-pf4RLfMl0);
   transition-property: all;
   transition-duration: 0.2s;
   min-width: 0;
   border-radius: 3px;
   padding: var(--token-L5ZvEOVLJ) 0px;
+  border-width: 5px;
+  border-style: none;
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .freeBox__caP {
@@ -509,10 +513,10 @@
   }
 }
 .footer .freeBox__caP:hover {
-  background: #47b5f2;
+  background: var(--token-a3sQNIQBO);
 }
 .footer .freeBox__caP:active {
-  background: var(--token-WNBJHso-i);
+  background: var(--token-7fkL0btWL);
 }
 .svg__vcC8K {
   position: relative;
@@ -529,7 +533,7 @@
   height: auto;
   max-width: 800px;
   font-size: 22px;
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   color: #ffffff;
 }
 .freeBox___7CGho {
@@ -577,12 +581,12 @@
   }
 }
 .freeBoxminimal___7CGho8Pz46 {
-  background: none;
+  background: url("/plasmic/amap_website/images/concreteTexture.png") top 50% left 50% / contain repeat;
 }
 .homeLink {
   position: relative;
   color: var(--token-B133__sIH);
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   cursor: pointer;
 }
 .footer .homeLink:hover {
@@ -597,7 +601,7 @@
 .sitemapLink {
   position: relative;
   color: var(--token-B133__sIH);
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   cursor: pointer;
 }
 .footer .sitemapLink:hover {
@@ -612,7 +616,7 @@
 .legalLink {
   position: relative;
   color: var(--token-B133__sIH);
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   cursor: pointer;
 }
 .footer .legalLink:hover {
@@ -627,7 +631,7 @@
 .creditsLink {
   position: relative;
   color: var(--token-B133__sIH);
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   cursor: pointer;
 }
 .footer .creditsLink:hover {
@@ -642,7 +646,7 @@
 .link {
   position: relative;
   color: var(--token-B133__sIH);
-  font-family: var(--token-5iF75TGQk);
+  font-family: var(--token-ongjxvNd3);
   cursor: pointer;
 }
 .footer .link:hover {
